--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,12 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-#Adding secrets
+#Adding secrets and configs
 *secrets.py
 
 
 #Ignore all data files
 *.csv
 *.parquet
+
+
